--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "multer": "^2.0.1",
     "mysql2": "^3.14.1",
     "openai": "^5.8.2",
+    "passport": "^0.7.0",
+    "passport-facebook": "^3.0.0",
     "xlsx": "^0.18.5"
   }
 }
